[gd_scene load_steps=53 format=4]

[ext_resource type="Script" path="res://Scripts/Campaign_Menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://k31f5jycpi66" path="res://Assets/Graphics/Newspaper.png" id="2"]
[ext_resource type="FontFile" uid="uid://cmyjws0sa77a1" path="res://Assets/Fonts/Nacho.ttf" id="3"]
[ext_resource type="FontFile" uid="uid://d2lr6x8obuyag" path="res://Assets/Fonts/Funny.ttf" id="4"]
[ext_resource type="AudioStream" uid="uid://dq2opcunboupj" path="res://Assets/SFX-Music/SFX_Select.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://dalcaapplmsmw" path="res://Assets/SFX-Music/SFX_Accept.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dpe74d30ei1jc" path="res://Assets/SFX-Music/SFX_Write.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://dfu8mr0j8a1nf" path="res://Assets/SFX-Music/SFX_Pick_Up_Folder.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://qqqppqfxmrsw" path="res://Assets/SFX-Music/SFX_Paper_Spin.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://b4kii7ysdr5kn" path="res://Assets/SFX-Music/SFX_Magic_Dust.wav" id="10"]
[ext_resource type="PackedScene" uid="uid://4mtma7rrk5eo" path="res://Scenes/Trophie.tscn" id="11"]
[ext_resource type="Texture2D" uid="uid://wy68fqbm2h4o" path="res://Assets/Graphics/Char_Afton_Smallest_Photo.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dlrww5li8aowx" path="res://Assets/Graphics/Char_Albertosky_Smallest_Photo.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dupvoqog4tp8t" path="res://Assets/Graphics/Char_Alf_Smallest_Photo.png" id="14"]
[ext_resource type="Texture2D" uid="uid://c0etu1ec5muru" path="res://Assets/Graphics/Char_Anastacha_Smallest_Photo.png" id="15"]
[ext_resource type="Texture2D" uid="uid://dvnqg88pmqog3" path="res://Assets/Graphics/Char_Ciprianni_Smallest_Photo.png" id="16"]
[ext_resource type="Texture2D" uid="uid://dychfo3sysa6u" path="res://Assets/Graphics/Char_Arnold_Smallest_Photo.png" id="17"]
[ext_resource type="Texture2D" uid="uid://b31i5ou1ahwic" path="res://Assets/Graphics/Char_Chester_Smallest_Photo.png" id="18"]
[ext_resource type="Texture2D" uid="uid://ux5ftcl0ctu3" path="res://Assets/Graphics/Char_UFO_Smallest_Photo.png" id="19"]
[ext_resource type="Texture2D" uid="uid://bdgy3a03gp6q" path="res://Assets/Graphics/Char_Cow_Smallest_Photo.png" id="20"]
[ext_resource type="Texture2D" uid="uid://cpolc46lut0kb" path="res://Assets/Graphics/Char_Chester_Missing_Smallest_Photo.png" id="21"]
[ext_resource type="Texture2D" uid="uid://dhdl5x6u5vmeo" path="res://Assets/Graphics/Char_Chester__isBack_Smallest_Photo.png" id="22"]
[ext_resource type="Texture2D" uid="uid://db8idk5ng8vn5" path="res://Assets/Graphics/Char_Chester_Hippie_Smallest_Photo.png" id="23"]
[ext_resource type="Texture2D" uid="uid://wwfb8fad0fne" path="res://Assets/Graphics/Char_DDD_Smallest_Photo.png" id="24"]
[ext_resource type="Texture2D" uid="uid://klhm2aql1gm0" path="res://Assets/Graphics/Char_Elenois_Smallest_Photo.png" id="25"]
[ext_resource type="Texture2D" uid="uid://b8spqk2idwqml" path="res://Assets/Graphics/Char_Francis_Smallest_Photo.png" id="26"]
[ext_resource type="Texture2D" uid="uid://dwu8i1wlmb50a" path="res://Assets/Graphics/Char_Gloria_Smallest_Photo.png" id="27"]
[ext_resource type="Texture2D" uid="uid://cv5l051h6v0d7" path="res://Assets/Graphics/Char_Gauss_Smallest_Photo.png" id="28"]
[ext_resource type="Texture2D" uid="uid://ba5fc38kkh6cq" path="res://Assets/Graphics/Char_Lois_Smallest_Photo.png" id="29"]
[ext_resource type="Texture2D" uid="uid://covair7e7mil8" path="res://Assets/Graphics/Char_Margarette_Smallest_Photo.png" id="30"]
[ext_resource type="Texture2D" uid="uid://bbn0jlyhj8fl2" path="res://Assets/Graphics/Char_Mclooy_Smallest_Photo.png" id="31"]
[ext_resource type="Texture2D" uid="uid://beyvlabqat15v" path="res://Assets/Graphics/Char_Mia_Smallest_Photo.png" id="32"]
[ext_resource type="Texture2D" uid="uid://dyl63hc8rd2pa" path="res://Assets/Graphics/Char_Nacha_Smallest_Photo.png" id="33"]
[ext_resource type="Texture2D" uid="uid://dtp56b160ta56" path="res://Assets/Graphics/Char_Rafttellyn_Smallest_Photo.png" id="34"]
[ext_resource type="Texture2D" uid="uid://bk1t47g4lbjm7" path="res://Assets/Graphics/Char_Robertosky_Smallest_Photo.png" id="35"]
[ext_resource type="Texture2D" uid="uid://di8nb5rts5rbl" path="res://Assets/Graphics/Char_Roman_Smallest_Photo.png" id="36"]
[ext_resource type="Texture2D" uid="uid://cbxo23bsmjpdl" path="res://Assets/Graphics/Char_Selenne_Smallest_Photo.png" id="37"]
[ext_resource type="Texture2D" uid="uid://b1g4cc6bcn5qj" path="res://Assets/Graphics/Char_Steven_Smallest_Photo.png" id="38"]
[ext_resource type="Texture2D" uid="uid://buhd2plmahjhe" path="res://Assets/Graphics/Folder_floors.png" id="39"]
[ext_resource type="Texture2D" uid="uid://disvidnncncs1" path="res://Assets/Graphics/Todays_list.png" id="40"]
[ext_resource type="Texture2D" uid="uid://bw4vjoxgef0mr" path="res://Assets/Graphics/Folder_paper.png" id="41"]
[ext_resource type="AudioStream" uid="uid://d2igqtah5u1xj" path="res://Assets/SFX-Music/Music_Tutorial_Nightmare.wav" id="42"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="SpriteFrames" id="6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12")
}],
"loop": true,
"name": &"Afton",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13")
}],
"loop": true,
"name": &"Albertsky",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14")
}],
"loop": true,
"name": &"Alf",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}],
"loop": true,
"name": &"Anastacha",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16")
}],
"loop": true,
"name": &"Angus",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17")
}],
"loop": true,
"name": &"Arnold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18")
}],
"loop": true,
"name": &"Chester_01",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19")
}],
"loop": true,
"name": &"Chester_02",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20")
}],
"loop": true,
"name": &"Chester_03",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21")
}],
"loop": true,
"name": &"Chester_04",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22")
}],
"loop": true,
"name": &"Chester_05",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23")
}],
"loop": true,
"name": &"Chester_06",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24")
}],
"loop": true,
"name": &"DDD",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25")
}],
"loop": true,
"name": &"Elenois",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26")
}],
"loop": true,
"name": &"Francis",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27")
}],
"loop": true,
"name": &"Gloria",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28")
}],
"loop": true,
"name": &"Izaack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29")
}],
"loop": true,
"name": &"Lois",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30")
}],
"loop": true,
"name": &"Margarette",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31")
}],
"loop": true,
"name": &"Mclooy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32")
}],
"loop": true,
"name": &"Mia",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33")
}],
"loop": true,
"name": &"Nacha",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34")
}],
"loop": true,
"name": &"Rafttellyn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35")
}],
"loop": true,
"name": &"Robertsky",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36")
}],
"loop": true,
"name": &"Roman",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37")
}],
"loop": true,
"name": &"Selenne",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38")
}],
"loop": true,
"name": &"Steven",
"speed": 5.0
}]
script = null

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Newspaper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Newspaper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
script = null

[sub_resource type="Animation" id="8"]
resource_name = "SPIN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Newspaper:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Newspaper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.5, 0.733333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319]
}
script = null

[sub_resource type="AnimationLibrary" id="9"]
_data = {
"RESET": SubResource("7"),
"SPIN": SubResource("8")
}
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[node name="CampaignMenu" type="Node2D"]
script = ExtResource("1")

[node name="Newspaper" type="Node2D" parent="."]
visible = false
position = Vector2(991, 563)

[node name="Paper" type="Sprite2D" parent="Newspaper"]
position = Vector2(-18.3499, -19.3499)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2")

[node name="Buttons" type="Control" parent="Newspaper"]
layout_mode = 3
anchors_preset = 0
offset_left = -361.35
offset_top = 168.65
offset_right = -321.35
offset_bottom = 208.65

[node name="Continue" type="Button" parent="Newspaper/Buttons"]
layout_mode = 0
offset_left = -208.0
offset_top = -282.0
offset_right = 521.0
offset_bottom = -105.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("1")
action_mode = 0
text = "Continue"
flat = true

[node name="New Campaign" type="Button" parent="Newspaper/Buttons"]
layout_mode = 0
offset_left = -264.0
offset_top = -171.0
offset_right = 739.0
offset_bottom = 5.99997
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("1")
action_mode = 0
text = "New Campaing"
flat = true

[node name="Record" type="Button" parent="Newspaper/Buttons"]
layout_mode = 0
offset_left = -141.0
offset_top = -48.0
offset_right = 359.0
offset_bottom = 129.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("2")
action_mode = 0
text = "Record"
flat = true

[node name="Menu" type="Button" parent="Newspaper/Buttons"]
layout_mode = 0
offset_left = -123.0
offset_top = 76.0
offset_right = 313.0
offset_bottom = 253.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("3")
action_mode = 0
text = "Menu"
flat = true

[node name="Quit" type="Button" parent="Newspaper/Buttons"]
layout_mode = 0
offset_left = -128.0
offset_top = 187.0
offset_right = 308.0
offset_bottom = 364.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 180
theme_override_styles/focus = SubResource("4")
action_mode = 0
text = "Quit"
flat = true

[node name="Doppel_info" type="Button" parent="Newspaper/Buttons"]
visible = false
layout_mode = 0
offset_left = 459.35
offset_top = -12.65
offset_right = 1209.35
offset_bottom = 87.35
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("5")
action_mode = 0
text = "Doppels you let in"
flat = true

[node name="Neighbor_info" type="Button" parent="Newspaper/Buttons"]
visible = false
layout_mode = 0
offset_left = 456.35
offset_top = 123.35
offset_right = 1206.35
offset_bottom = 223.35
scale = Vector2(0.75, 0.75)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("5")
action_mode = 0
text = "Neighbors killed"
flat = true

[node name="Select" type="AudioStreamPlayer" parent="Newspaper"]
stream = ExtResource("5")

[node name="Accept" type="AudioStreamPlayer" parent="Newspaper"]
stream = ExtResource("6")

[node name="Check_Write" type="AudioStreamPlayer" parent="Newspaper"]
stream = ExtResource("7")
pitch_scale = 0.85

[node name="Pick_Up_Folder" type="AudioStreamPlayer" parent="Newspaper"]
stream = ExtResource("8")

[node name="Newspaper" type="AudioStreamPlayer" parent="Newspaper"]
stream = ExtResource("9")
pitch_scale = 0.8

[node name="Magic_Dust" type="AudioStreamPlayer" parent="Newspaper"]
stream = ExtResource("10")

[node name="Trophie" parent="Newspaper" instance=ExtResource("11")]
visible = false
position = Vector2(-145, 172)
scale = Vector2(0.25, 0.25)

[node name="Level record" type="Label" parent="Newspaper"]
offset_left = 75.6501
offset_top = -525.35
offset_right = 659.65
offset_bottom = -425.35
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 80
text = "Lastest news"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Day count" type="Label" parent="Newspaper"]
offset_left = -674.35
offset_top = -311.35
offset_right = -90.3499
offset_bottom = -211.35
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 80
text = "Day: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info_01" type="Label" parent="Newspaper"]
offset_left = 344.65
offset_top = -359.35
offset_right = 704.65
offset_bottom = -29.3499
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "The Doppelgangers keep coming.

But the D.D.D. is
here to stop them
once and for all."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Info_02" type="Label" parent="Newspaper"]
offset_left = 62.6501
offset_top = 30.6501
offset_right = 702.65
offset_bottom = 447.65
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "New job offer!

Doorman at an apartment complex located in the downtown.

Requirements: None.
Salary: Minimum.

For more information, contact the D.D.D."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Pictures" type="Node2D" parent="Newspaper"]
position = Vector2(176.65, -195.35)
scale = Vector2(1.68, 1.68)

[node name="Pictures" type="AnimatedSprite2D" parent="Newspaper/Pictures"]
position = Vector2(0, 1)
sprite_frames = SubResource("6")
animation = &"DDD"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("9")
}
speed_scale = 4.0

[node name="Details" type="Node2D" parent="."]

[node name="Folder" type="Sprite2D" parent="Details"]
position = Vector2(-854, 484)
texture = ExtResource("39")

[node name="Paper" type="Sprite2D" parent="Details"]
position = Vector2(-430, 535)
scale = Vector2(0.9, 0.9)
texture = ExtResource("40")

[node name="Title" type="Label" parent="Details"]
offset_left = -686.0
offset_top = -21.0
offset_right = -102.0
offset_bottom = 236.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 80
text = "Details:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="Details"]
offset_left = -712.0
offset_top = 189.0
offset_right = -128.0
offset_bottom = 900.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "* one

* two

* tree

* four

* five

* six

* seven

* eight

* nine
"
vertical_alignment = 1

[node name="Ok" type="Button" parent="Details"]
offset_left = -388.0
offset_top = 907.0
offset_right = -61.0
offset_bottom = 1036.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("10")
disabled = true
action_mode = 0
text = "Ok"
flat = true

[node name="Question" type="Node2D" parent="."]
visible = false

[node name="Paper" type="Sprite2D" parent="Question"]
position = Vector2(1001, 554)
texture = ExtResource("41")

[node name="Title" type="Label" parent="Question/Paper"]
offset_left = -302.0
offset_top = -294.0
offset_right = 298.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 45
text = "Start a new campaign will
delete the current campaign
data.

Do you want to start a new
campaign?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Yes" type="Button" parent="Question"]
offset_left = 742.0
offset_top = 709.0
offset_right = 942.0
offset_bottom = 838.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("10")
action_mode = 0
text = "Yes"
flat = true

[node name="No" type="Button" parent="Question"]
offset_left = 1077.0
offset_top = 712.0
offset_right = 1277.0
offset_bottom = 841.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("10")
action_mode = 0
text = "No"
flat = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("42")
pitch_scale = 0.5

[connection signal="mouse_entered" from="Newspaper/Buttons/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="mouse_exited" from="Newspaper/Buttons/Continue" to="." method="_on_continue_mouse_exited"]
[connection signal="pressed" from="Newspaper/Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="Newspaper/Buttons/New Campaign" to="." method="_on_new_campaign_mouse_entered"]
[connection signal="mouse_exited" from="Newspaper/Buttons/New Campaign" to="." method="_on_new_campaign_mouse_exited"]
[connection signal="pressed" from="Newspaper/Buttons/New Campaign" to="." method="_on_new_campaign_pressed"]
[connection signal="mouse_entered" from="Newspaper/Buttons/Record" to="." method="_on_record_mouse_entered"]
[connection signal="mouse_exited" from="Newspaper/Buttons/Record" to="." method="_on_record_mouse_exited"]
[connection signal="pressed" from="Newspaper/Buttons/Record" to="." method="_on_record_pressed"]
[connection signal="mouse_entered" from="Newspaper/Buttons/Menu" to="." method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="Newspaper/Buttons/Menu" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="Newspaper/Buttons/Menu" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="Newspaper/Buttons/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Newspaper/Buttons/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="Newspaper/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="Newspaper/Buttons/Doppel_info" to="." method="_on_doppel_info_mouse_entered"]
[connection signal="mouse_exited" from="Newspaper/Buttons/Doppel_info" to="." method="_on_doppel_info_mouse_exited"]
[connection signal="pressed" from="Newspaper/Buttons/Doppel_info" to="." method="_on_doppel_info_pressed"]
[connection signal="mouse_entered" from="Newspaper/Buttons/Neighbor_info" to="." method="_on_neighbor_info_mouse_entered"]
[connection signal="mouse_exited" from="Newspaper/Buttons/Neighbor_info" to="." method="_on_neighbor_info_mouse_exited"]
[connection signal="pressed" from="Newspaper/Buttons/Neighbor_info" to="." method="_on_neighbor_info_pressed"]
[connection signal="mouse_entered" from="Details/Ok" to="." method="_on_ok_mouse_entered"]
[connection signal="mouse_exited" from="Details/Ok" to="." method="_on_ok_mouse_exited"]
[connection signal="pressed" from="Details/Ok" to="." method="_on_ok_pressed"]
[connection signal="mouse_entered" from="Question/Yes" to="." method="_on_yes_mouse_entered"]
[connection signal="mouse_exited" from="Question/Yes" to="." method="_on_yes_mouse_exited"]
[connection signal="pressed" from="Question/Yes" to="." method="_on_yes_pressed"]
[connection signal="mouse_entered" from="Question/No" to="." method="_on_no_mouse_entered"]
[connection signal="mouse_exited" from="Question/No" to="." method="_on_no_mouse_exited"]
[connection signal="pressed" from="Question/No" to="." method="_on_no_pressed"]
